# Finbank

./: .gitignore  CMakeLists.txt  Finbank.pro  Finbank.qmlproject  Finbank.qmlproject.qtds  Finbank.qmlproject.qtds.79e5177  databasemanager.cpp  how-to-run.txt  qds.cmake  register.cpp  register.hpp
App/: CMakeLists.txt  auth.json  config.seb  createtransaction.cpp  createtransaction.hpp  dashboard.cpp  dashboard.hpp  googlegateway.cpp  googlegateway.hpp  login.cpp  login.hpp  main.cpp  register.cpp  register.hpp  searchrecipent.cpp  searchrecipent.hpp  stockapiclient.cpp  stockapiclient.hpp
App/autogen/: environment.h
DAL/: databasemanager.hpp  stockapiclient.cpp  stockapiclient.hpp
DDL/: createtransaction.cpp  createtransaction.hpp  dashboard.cpp  dashboard.hpp  login.cpp  main.cpp  register.hpp  searchrecipent.cpp  searchrecipent.hpp
Documents/: 183_application_1.docx  Finbank.pptx  ~$Finbank.pptx
Finbank/: CMakeLists.txt  Constants.qml  qmldir
Finbank/designer/: plugin.metainfo
FinbankContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
FinbankContent/Finbank/Page 1/: Currencies.qml  CurrenciesWindow.ui.qml  Dashboard.qml  Dashboard.ui.qml  DashboardWindow.ui.qml  FoundUser.qml  Gg_credit_card.ui.qml  Gg_credit_card_1.ui.qml  Intro.qml  IntroWindow.ui.qml  LogInWindow.ui.qml  OverviewTransaction.qml  OverviewTransactionWindow.ui.qml  RecipentDescription.qml  RecipentDescriptionWindow.ui.qml  SelectRecipent.qml  SelectRecipentWindow.ui.qml  SelectedRecipent.qml  SendMoney.qml  SendMoneyWindow.ui.qml  SignIn.qml  SignInWindow.ui.qml  SignUp.qml  SignUp1.qml  SignUpWindow.ui.qml  SignUpWindow_1.ui.qml  SingleTransactionDetail.qml  Stock.qml  TradingDashboard.qml  TradingDashboardWindow.ui.qml  TradingMarket.qml  TradingMarketWindow.ui.qml  TransactionDetailsWindows.ui.qml  Transactions.qml  TransactionsWindow.ui.qml  TransferType.qml  TransferTypeWindow.ui.qml
Forms/: .gitignore
Presentation-Layer/: Dashboard.qml  FoundUser.qml  LandingPage.qml  NavbarMobile.qml  Overview.qml  PortfolioValue.qml  RecipentDescription.qml  SelectRecipent.qml  SendMoney.qml  SendMoneyWindow.ui.qml  SignIn.qml  SignUp.qml  SignUp2.qml  SingleTransactionDetail.qml  Stock.qml  TradingDashboard.qml  TradingMarket.qml  Transactions.qml  TransferType.qml  Wallet.qml
Releases/MacOS/Finbank/: appFinbank_qml_module_dir_map.qrc  qmldir
Releases/MacOS/Finbank/Presentation-Layer/: Main.qml  SingleTransactionDetail.qml  TableRow.qml  TradingDashboard.qml  TradingMarket.qml  Transactions.qml  TransferType.qml
Releases/MacOS/Finbank/resources/: resources.qrc
Releases/MacOS/appFinbank.app/Contents/: Info.plist
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DAnimation.framework/Versions/A/: Qt3DAnimation
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DCore.framework/Versions/A/: Qt3DCore
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DExtras.framework/Versions/A/: Qt3DExtras
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DInput.framework/Versions/A/: Qt3DInput
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DLogic.framework/Versions/A/: Qt3DLogic
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DQuick.framework/Versions/A/: Qt3DQuick
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DQuickScene2D.framework/Versions/A/: Qt3DQuickScene2D
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DQuickScene3D.framework/: Qt3DQuickScene3D
Releases/MacOS/appFinbank.app/Contents/Frameworks/Qt3DQuickScene3D.framework/Versions/A/: Qt3DQuickScene3D
Releases/MacOS/appFinbank.app/Contents/Frameworks/QtCharts.framework/Versions/A/: QtCharts
Releases/MacOS/appFinbank.app/Contents/Frameworks/QtChartsQml.framework/Versions/A/: QtChartsQml
Releases/MacOS/appFinbank.app/Contents/Frameworks/QtConcurrent.framework/Versions/A/: QtConcurrent
Releases/MacOS/appFinbank.app/Contents/Frameworks/QtDBus.framework/Versions/A/: QtDBus
Releases/Windows/Release/Finbank/: appFinbank_qml_module_dir_map.qrc
Releases/Windows/Release/Finbank/Presentation-Layer/: LandingPage.qml  RecipentDescription.qml
Src/: login.cpp  login.hpp
Testing/UntitledProject/: UntitledProject.qmlproject
Testing/UntitledProject/UntitledProjectContent/: App.qml  Dashboad.qml  Investing.qml  NavbarMobile.qml  PortfolioValue.qml  RecipentDetails.qml  SendMoney.qml  SingleTransactionDetail.qml  StockView.qml  Test.qml  TradingDashboard.qml  TradingMarket.qml  TransferType.qml
Testing/UntitledProject/UntitledProjectContent/resources/: resources.qrc
UntitledProject/UntitledProjectContent/: App.qml  Dashboad.qml  FoundUser.qml  Investing.qml  Overview.qml  Portfolio.qml  RecipentDetails.qml  SelectRecipent.qml  SendMoney.qml  SignIn.qml  SingleTransactionDetail.qml  TableRow.qml  TradingDashboard.qml  TradingMarket.qml  Transactions.qml  TransferType.qml
UntitledProject/UntitledProjectContent/resources/: Finbank.db  identifier.sqlite  resources.qrc  stocks.json
qml/: Currencies.qml  CurrenciesWindow.ui.qml  Dashboard.qml  DashboardWindow.ui.qml  FoundUser.qml  LandingPage.qml  LogInWindow.ui.qml  Main.qml  OverviewTransaction.qml  OverviewTransactionWindow.ui.qml  RecipentDescription.qml  RecipentDescriptionWindow.ui.qml  SelectRecipent.qml  SelectRecipentWindow.ui.qml  SelectedRecipent.qml  SendMoney.qml  SendMoneyWindow.ui.qml  SignIn.qml  SignInWindow.ui.qml  SignUp.qml  SignUp1.qml  SignUp2.qml  SignUpWindow.ui.qml  SignUpWindow_1.ui.qml  SingleTransactionDetail.qml  Stock.qml  TradingDashboard.qml  TradingDashboardWindow.ui.qml  TradingMarket.qml  TradingMarketWindow.ui.qml  Transactions.qml  TransactionsWindow.ui.qml  TransferType.qml  TransferTypeWindow.ui.qml
resources/: Finbank.db  config.json  identifier.sqlite  resources.qrc
src/: LandingPage.qml  auth.json  createtransaction.cpp  createtransaction.hpp  dashboard.cpp  databasemanager.cpp  databasemanager.hpp  login.cpp  login.hpp  main.cpp  register.cpp  searchrecipent.cpp  stockapiclient.cpp  stockapiclient.hpp
website/: package-lock.json
website/backend/: server.js
website/client/src/: App.js
(+44 files in other folders)
